# RailFLOW

./: .env.example  .gitignore  README.md  TEST_INSTRUCTIONS.md  how-it-works.html  jansuraksha-flowchart.html  pyproject.toml
.claude/: settings.local.json
backend/: requirements.txt
backend/app/: __init__.py  auth.py  core.py  db.py  main.py
backend/app/engines/: crowd_engine.py  safety_engine.py
backend/app/engines/jansuraksha/: agent.py  mappings.py  neo4j_context.py  prompts.py  retrieval.py  templates.py  tools.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  bot.py  complaints.py  crowdsignal.py  disruption.py  personalguard.py  safety.py  trains.py
backend/app/services/: erail.py  notifications.py
backend/app/utils/: logger.py
backend/data/: legal_corpus.py  llm_timetable_data.py  mumbai_timetable.py  railflow.db
backend/data/deaths/: station_deaths.json
backend/scripts/: convert_timetable.py  fetch_timetable_llm.py  ingest_legal.py  load_death_data.py  scrape_trainhelp.py  seed_crowd_data.py  seed_neo4j.py  set_demo_emails.py  setup_neo4j_schema.py
docs/: data_flow.html
frontend/: capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/scogo/railflow/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AlertPanel.jsx  ChatBot.jsx  CrowdDashboard.jsx  DisruptionView.jsx  Login.jsx  PassengerHome.jsx  PoliceDashboard.jsx  Signup.jsx
