[project]
name = "railsense"
version = "1.0.0"
description = "RailSense — AI Safety Intelligence for Mumbai Suburban Railways"
requires-python = ">=3.12"
dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    # Neo4j Knowledge Graph
    "neo4j>=5.25.0",
    # LLM (GPT-4o-mini vision for FootGuard)
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.28",
    "langchain-core>=0.3.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    # Milvus (Dhruv - RAG vector store for Jan Suraksha Bot)
    "pymilvus>=2.4.7",
    # Computer Vision (FootGuard video analysis)
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    # Data
    "requests>=2.32.3",
    "numpy>=1.26.4",
    "python-docx>=1.2.0",
]
